--- a/NBVprediccion.ipynb
+++ b/NBVprediccion.ipynb
@@ -650,9 +650,10 @@
     "    occupancy_probs =  Get_octree(octree, dir_carpeta, i, eye[i])\n",
     "    direccion_octree= bytes(dir_carpeta + \"/Octree/octree_{}.ot\".format(i), encoding='utf8')\n",
     "    octree.writeBinary(direccion_octree)\n",
-    "    grid = np.reshape(occupancy_probs, (31,31,31))\n",
+    "    grid = np.reshape(occupancy_probs, (31,31,31))    \n",
+    "    ## Aqui evaluamos si esta completo el modelo en este punto\n",
+    "    ## De no estarlo, se consulta a la NN el NBV \n",
     "    torch_grid = torch.from_numpy(grid)\n",
-    "    \n",
     "    #condicion = True\n",
     "    #IA\n",
     "    #output, _= net_sample_output_nbv(model, grid, device) \n",
@@ -775,6 +776,15 @@
    "outputs": [],
    "source": [
     "o3d.visualization.draw_geometries([nube])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python3 download_collection.py -o \"GoogleResearch\" -c \"Scanned Objects by Google Research\""
    ]
   }
  ],
