--- a/NBVprediccion.ipynb
+++ b/NBVprediccion.ipynb
@@ -248,289 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "orig = o3d.geometry.TriangleMesh.create_coordinate_frame()\n",
-    "orig.translate([0,0,0])\n",
-    "pose = o3d.geometry.TriangleMesh.create_coordinate_frame()\n",
-    "pose.translate([-1,-1,.5])\n",
-    "R = pose.get_rotation_matrix_from_xyz((np.pi/2,0,0))\n",
-    "pose.rotate(R)\n",
-    "o3d.visualization.draw_geometries([mesh, orig, pose])"
+    "o3d.visualization.draw_geometries([mesh])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pcd = o3d.io.read_point_cloud('obj/ASICS_GELBlur33_20_GS_BlackWhiteSafety_Orange/Point_cloud/cloud_gt.pcd')\n",
-    "o3d.visualization.draw_geometries([pcd])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2_of_Jenga_Classic_Game',\n",
-       " '50_BLOCKS',\n",
-       " '5_HTP',\n",
-       " 'Animal_Crossing_New_Leaf_Nintendo_3DS_Game',\n",
-       " 'ASICS_GELAce_Pro_Pearl_WhitePink',\n",
-       " 'ASICS_GELBlur33_20_GS_BlackWhiteSafety_Orange',\n",
-       " 'Asus_M5A78LMUSB3_Motherboard_Micro_ATX_Socket_AM3']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = os.listdir('obj')\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;33m[Open3D WARNING] [ViewControl] ConvertFromPinholeCameraParameters() failed because window height and width do not match.\u001b[0;m\n"
-     ]
-    }
-   ],
-   "source": [
-    "import open3d as o3d\n",
-    "\n",
-    "\n",
-    "def save_view_point(pcd, filename):\n",
-    "    vis = o3d.visualization.Visualizer()\n",
-    "    vis.create_window()\n",
-    "    vis.add_geometry(pcd)\n",
-    "    vis.run()  # user changes the view and press \"q\" to terminate\n",
-    "    param = vis.get_view_control().convert_to_pinhole_camera_parameters()\n",
-    "    o3d.io.write_pinhole_camera_parameters(filename, param)\n",
-    "    vis.destroy_window()\n",
-    "\n",
-    "\n",
-    "def load_view_point(pcd, filename):\n",
-    "    vis = o3d.visualization.Visualizer()\n",
-    "    vis.create_window()\n",
-    "    ctr = vis.get_view_control()\n",
-    "    param = o3d.io.read_pinhole_camera_parameters(filename)\n",
-    "    vis.add_geometry(pcd)\n",
-    "    ctr.convert_from_pinhole_camera_parameters(param)\n",
-    "    vis.run()\n",
-    "    vis.destroy_window()\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    pcd_data = o3d.data.PCDPointCloud()\n",
-    "    pcd = o3d.io.read_point_cloud(pcd_data.path)\n",
-    "    save_view_point(pcd, \"viewpoint.json\")\n",
-    "    load_view_point(pcd, \"viewpoint.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Init without view_file\n",
-      "\u001b[92mAll o3d_view codes run successfully, Close now..\u001b[0m See you!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import open3d as o3d\n",
-    "import json\n",
-    "import os, sys\n",
-    "from typing import List, Callable\n",
-    "from functools import partial\n",
-    "\n",
-    "def hex_to_rgb(hex_color):\n",
-    "    hex_color = hex_color.lstrip(\"#\")\n",
-    "    return tuple(int(hex_color[i:i + 2], 16) / 255.0 for i in (0, 2, 4))\n",
-    "\n",
-    "color_map_hex = ['#a6cee3', '#de2d26', '#1f78b4','#b2df8a','#33a02c','#fb9a99','#e31a1c','#fdbf6f','#ff7f00','#cab2d6','#6a3d9a','#ffff99','#b15928',\\\n",
-    "                 '#8dd3c7','#ffffb3','#bebada','#fb8072','#80b1d3','#fdb462','#b3de69','#fccde5','#d9d9d9','#bc80bd','#ccebc5','#ffed6f']\n",
-    "color_map = [hex_to_rgb(color) for color in color_map_hex]\n",
-    "\n",
-    "class ViewControl:\n",
-    "    def __init__(self, vctrl: o3d.visualization.ViewControl, view_file=None):\n",
-    "        self.vctrl = vctrl\n",
-    "        self.params = None\n",
-    "        if view_file is not None:\n",
-    "            print(f\"Init with view_file from: {view_file}\")\n",
-    "            self.parse_file(view_file)\n",
-    "            self.set_param()\n",
-    "        else:\n",
-    "            print(\"Init without view_file\")\n",
-    "\n",
-    "    def read_viewTfile(self, view_file):\n",
-    "        if view_file is None:\n",
-    "            return\n",
-    "        self.parse_file(view_file)\n",
-    "        self.set_param()\n",
-    "\n",
-    "    def save_viewTfile(self, view_file):\n",
-    "        return\n",
-    "    \n",
-    "    def parse_file(self, view_file):\n",
-    "        if view_file is None:\n",
-    "            print(f\"\\033[91mNo specific view file. Skip to setup viewpoint in open3d. \\033[0m\")\n",
-    "            return\n",
-    "        if(os.path.exists(view_file)):\n",
-    "            with open((view_file)) as user_file:\n",
-    "                file_contents = user_file.read()\n",
-    "                self.params = json.loads(file_contents)\n",
-    "        else:\n",
-    "            print(f\"\\033[91mDidn't find the file, please check it again: {view_file} \\033[0m\")\n",
-    "            print(f\"NOTE: If you still have this error, please give the absulote path for view_file\")\n",
-    "            sys.exit()\n",
-    "\n",
-    "    def set_param(self):\n",
-    "        self.vctrl.change_field_of_view(self.params['trajectory'][0]['field_of_view'])\n",
-    "        self.vctrl.set_front(self.params['trajectory'][0]['front'])\n",
-    "        self.vctrl.set_lookat(self.params['trajectory'][0]['lookat'])\n",
-    "        self.vctrl.set_up(self.params['trajectory'][0]['up'])\n",
-    "        self.vctrl.set_zoom(self.params['trajectory'][0]['zoom'])\n",
-    "\n",
-    "class MyVisualizer:\n",
-    "    def __init__(self, view_file=None, window_title=\"Default\"):\n",
-    "        self.params = None\n",
-    "        self.vis = o3d.visualization.VisualizerWithKeyCallback()\n",
-    "        self.vis.create_window(window_name=window_title)\n",
-    "        self.o3d_vctrl = ViewControl(self.vis.get_view_control(), view_file=view_file)\n",
-    "        self.view_file = view_file\n",
-    "\n",
-    "        self.block_vis = True\n",
-    "        self.play_crun = False\n",
-    "        self.reset_bounding_box = True\n",
-    "        print(\n",
-    "            f\"\\n{window_title.capitalize()} initialized. Press:\\n\"\n",
-    "            \"\\t[SPACE] to pause/start\\n\"\n",
-    "            \"\\t  [ESC] to exit\\n\"\n",
-    "            \"\\t    [N] to step\\n\"\n",
-    "        )\n",
-    "        self._register_key_callback([\"Ā\", \"Q\", \"\\x1b\"], self._quit)\n",
-    "        self._register_key_callback([\" \"], self._start_stop)\n",
-    "        self._register_key_callback([\"N\"], self._next_frame)\n",
-    "\n",
-    "    def show(self, assets: List):\n",
-    "        self.vis.clear_geometries()\n",
-    "\n",
-    "        for asset in assets:\n",
-    "            self.vis.add_geometry(asset)\n",
-    "            self.o3d_vctrl.read_viewTfile(self.view_file)\n",
-    "\n",
-    "        self.vis.update_renderer()\n",
-    "        self.vis.poll_events()\n",
-    "        self.vis.run()\n",
-    "        self.vis.destroy_window()\n",
-    "\n",
-    "    def update(self, assets: List, clear: bool = True):\n",
-    "        if clear:\n",
-    "            self.vis.clear_geometries()\n",
-    "\n",
-    "        for asset in assets:\n",
-    "            self.vis.add_geometry(asset, reset_bounding_box=False)\n",
-    "            self.vis.update_geometry(asset)\n",
-    "\n",
-    "        if self.reset_bounding_box:\n",
-    "            self.vis.reset_view_point(True)\n",
-    "            if self.view_file is not None:\n",
-    "                self.o3d_vctrl.read_viewTfile(self.view_file)\n",
-    "            self.reset_bounding_box = False\n",
-    "\n",
-    "        self.vis.update_renderer()\n",
-    "        while self.block_vis:\n",
-    "            self.vis.poll_events()\n",
-    "            if self.play_crun:\n",
-    "                break\n",
-    "        self.block_vis = not self.block_vis\n",
-    "\n",
-    "    def _register_key_callback(self, keys: List, callback: Callable):\n",
-    "        for key in keys:\n",
-    "            self.vis.register_key_callback(ord(str(key)), partial(callback))\n",
-    "    def _next_frame(self, vis):\n",
-    "        self.block_vis = not self.block_vis\n",
-    "    def _start_stop(self, vis):\n",
-    "        self.play_crun = not self.play_crun\n",
-    "    def _quit(self, vis):\n",
-    "        print(\"Destroying Visualizer. Thanks for using ^v^.\")\n",
-    "        vis.destroy_window()\n",
-    "        os._exit(0)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    json_content = \"\"\"{\n",
-    "\t\"class_name\" : \"ViewTrajectory\",\n",
-    "\t\"interval\" : 29,\n",
-    "\t\"is_loop\" : false,\n",
-    "\t\"trajectory\" : \n",
-    "\t[\n",
-    "\t\t{\n",
-    "\t\t\t\"boundingbox_max\" : [ 3.9660897254943848, 2.427476167678833, 2.55859375 ],\n",
-    "\t\t\t\"boundingbox_min\" : [ 0.55859375, 0.83203125, 0.56663715839385986 ],\n",
-    "\t\t\t\"field_of_view\" : 60.0,\n",
-    "\t\t\t\"front\" : [ 0.27236083595988803, -0.25567329763523589, -0.92760484038816615 ],\n",
-    "\t\t\t\"lookat\" : [ 2.4114965637897101, 1.8070288935660688, 1.5662280268112718 ],\n",
-    "\t\t\t\"up\" : [ -0.072779625398507866, -0.96676294585190281, 0.24509698622097265 ],\n",
-    "\t\t\t\"zoom\" : 0.47999999999999976\n",
-    "\t\t}\n",
-    "\t],\n",
-    "\t\"version_major\" : 1,\n",
-    "\t\"version_minor\" : 0\n",
-    "}\n",
-    "\"\"\"\n",
-    "    # write to json file\n",
-    "    view_json_file = \"view.json\"\n",
-    "    with open(view_json_file, 'w') as f:\n",
-    "        f.write(json_content)\n",
-    "    sample_ply_data = o3d.data.PLYPointCloud()\n",
-    "    pcd = o3d.io.read_point_cloud(sample_ply_data.path)\n",
-    "    # 1. define\n",
-    "    viz = o3d.visualization.VisualizerWithKeyCallback()\n",
-    "    # 2. create\n",
-    "    viz.create_window(window_name=\"TEST ON Change View point through JSON, Press V Please\")\n",
-    "    # 3. add geometry\n",
-    "    viz.add_geometry(pcd)\n",
-    "    # 4. get control !!! must step by step\n",
-    "    ctr = viz.get_view_control()\n",
-    "\n",
-    "    o3d_vctrl = ViewControl(ctr)\n",
-    "\n",
-    "    def set_view(viz):\n",
-    "        #Your update routine\n",
-    "        o3d_vctrl.read_viewTfile(view_json_file)\n",
-    "        viz.update_renderer()\n",
-    "        viz.poll_events()\n",
-    "        viz.run()\n",
-    "\n",
-    "    viz.register_key_callback(ord('V'), set_view)\n",
-    "    viz.run()\n",
-    "    viz.destroy_window()\n",
-    "    print(\"\\033[92mAll o3d_view codes run successfully, Close now..\\033[0m See you!\")\n",
-    "\n",
-    "    # or:\n",
-    "    # viz = MyVisualizer(view_file, window_title=\"Check Pose\")\n",
-    "    # viz.show([*pcds, *draw_tfs])"
+    "## Pruebas de MAtrices"
    ]
   },
   {
@@ -550,6 +279,48 @@
    ],
    "source": [
     "import open3d as o3d\n",
+    "import numpy as np \n",
+    "from utils_camera import save_camera_trayectory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eye = np.load(\"poses.npy\")\n",
+    "center = [0,0,.2]#mesh.get_center()\n",
+    "up = [0, 1, 0]\n",
+    "fov = 25\n",
+    "width = 100\n",
+    "height = 100\n",
+    "direccion = \"objetos\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_camera_trayectory(direccion, eye[:10], center, up, fov, width, height)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pruebas ploteo trayectoria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import open3d as o3d\n",
     "import numpy as np\n",
     "#from utils_o3d import camara\n",
     "from utils_visualizer import draw_camera\n",
@@ -559,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = o3d.io.read_pinhole_camera_trajectory(\"trayectoria_camara_prueba.json\")"
+    "param = o3d.io.read_pinhole_camera_trajectory(direccion + \"/trayectoria_camara.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,153 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o3d.visualization.draw_geometries([mesh])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "o3d.visualization.draw_geometries(frames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_set = o3d.geometry.LineSet(\n",
-    "        points=o3d.utility.Vector3dVector(points_w[1]),\n",
-    "        lines=o3d.utility.Vector2iVector(lines)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points_ws = np.asarray(points_w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.        ,  0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        ]],\n",
-       "\n",
-       "       [[ 0.08655844, -0.02674352,  0.30896485],\n",
-       "        [ 0.08655844, -0.02674352,  0.30896485],\n",
-       "        [ 0.08655844, -0.02674352,  0.30896485]],\n",
-       "\n",
-       "       [[-0.08655844, -0.02674352,  0.30896485],\n",
-       "        [-0.08655844, -0.02674352,  0.30896485],\n",
-       "        [-0.08655844, -0.02674352,  0.30896485]],\n",
-       "\n",
-       "       [[ 0.08655844,  0.02674352,  0.30896485],\n",
-       "        [ 0.08655844,  0.02674352,  0.30896485],\n",
-       "        [ 0.08655844,  0.02674352,  0.30896485]],\n",
-       "\n",
-       "       [[-0.08655844,  0.02674352,  0.30896485],\n",
-       "        [-0.08655844,  0.02674352,  0.30896485],\n",
-       "        [-0.08655844,  0.02674352,  0.30896485]]])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points_ws"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.08655844, -0.02674352,  0.30896485],\n",
-       "       [ 0.08655844, -0.02674352,  0.30896485],\n",
-       "       [ 0.08655844, -0.02674352,  0.30896485],\n",
-       "       [-0.08655844, -0.02674352,  0.30896485],\n",
-       "       [-0.08655844, -0.02674352,  0.30896485],\n",
-       "       [-0.08655844, -0.02674352,  0.30896485],\n",
-       "       [ 0.08655844,  0.02674352,  0.30896485],\n",
-       "       [ 0.08655844,  0.02674352,  0.30896485],\n",
-       "       [ 0.08655844,  0.02674352,  0.30896485],\n",
-       "       [-0.08655844,  0.02674352,  0.30896485],\n",
-       "       [-0.08655844,  0.02674352,  0.30896485],\n",
-       "       [-0.08655844,  0.02674352,  0.30896485]])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points_ws.reshape(15,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lines[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 3, 3)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "points_w.shape"
    ]
   },
   {
